--- a/template.yaml
+++ b/template.yaml
@@ -23,10 +23,10 @@ Resources:
         Variables:
           STRIPE_SECRET_KEY_PATH: prod/applePayPoc/stripeSecretKey
           STRIPE_CONNECT_ACCOUNT_ID: acct_1NpZhLCMzrNxPzqB
-          REGION: !Sub AWS:Region
+          REGION: us-east-1
       Policies:
         - AWSSecretsManagerGetSecretValuePolicy:
-            SecretArn: arn:aws:secretsmanager:${AWS:Region}:${AWS:AccountId}:secret:prod/applePayPoc/stripeSecretKey-YmSAGW
+            SecretArn: arn:aws:secretsmanager:us-east-1:303223618917:secret:prod/applePayPoc/stripeSecretKey-YmSAGW
       Events:
         HelloWorld:
           Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
